--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "env-cmd -f env/.env.dev next dev",
+    "local": "env-cmd -f env/.env.local next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
